--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -548,9 +548,9 @@
 			</menu>
 			<separator/>
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Oor Shareaza..."/>
-			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Tabbed" type="bar">
@@ -647,9 +647,9 @@
 			</menu>
 			<separator/>
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Oor Shareaza..."/>
-			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Windowed" type="bar">
@@ -739,9 +739,9 @@
 			</menu>
 			<separator/>
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
+			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Oor Shareaza..."/>
-			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<!-- VIEW POPUP -->
@@ -4406,7 +4406,7 @@
 		<control/>
 		<control/>
 	</dialog>
-	<dialog name="CDecodeMetadataDlg" cookie="BuBuStCo" caption="Metadata Lokalisering">
+	<dialog name="CDecodeMetadataDlg" cookie="StCoBuBuBuStStBuBu" caption="Metadata Lokalisering">
 		<control caption="Selekteer asseblief die her-enkoderingsmetode:"/>
 		<control caption="Arabic|Baltic|Central European|Chinese Simplified|Chinese Traditional|Cyrillic|Greek|Hebrew|Japanese|Korean|Thai|Turkish|Vietnamese"/>
 		<control caption="Preview:"/>
@@ -4416,6 +4416,12 @@
 		<control/>
 		<control caption="OK"/>
 		<control caption="Kanselleer"/>
+	</dialog>
+	<dialog name="CIrcInputDlg" cookie="EdBuBuSt" caption="Channel Name|Why reason">
+		<control/>
+		<control caption="OK"/>
+		<control caption="Kanselleer"/>
+		<control caption="Add a channel name:|Enter kick/ban reason:"/>
 	</dialog>
 </dialogs>
 <!-- Columns Definitions -->
