--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -4412,6 +4412,12 @@
 		<control caption="OK"/>
 		<control caption="Отмена"/>
 	</dialog>
+	<dialog name="CIrcInputDlg" cookie="EdBuBuSt" caption="Channel Name|Why reason">
+		<control/>
+		<control caption="OK"/>
+		<control caption="Отмена"/>
+		<control caption="Add a channel name:|Enter kick/ban reason:"/>
+	</dialog>
 </dialogs>
 <!-- Columns Definitions -->
 <listColumns>
