--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -4266,12 +4266,25 @@
 		<control/>
 	</dialog>
 
-	<dialog name="CDecodeMetadataDlg" cookie="BuBuStCo" caption="Lokalizacija Metadate">
-		<control caption="OK"/>
-		<control caption="Odustani"/>
+	<dialog name="CDecodeMetadataDlg" cookie="StCoBuBuBuStStBuBu" caption="Lokalizacija Metadate">
 		<control caption="Molim odaberite metodu re-encodinga"/>
 		<control caption="Arabic|Baltic|Central European|Chinese simplified|Chinese traditional|Cyrillic|Greek|Hebrew|Japanese|Korean|Thai|Turkish|Vietnamese"/>
+		<control caption="Preview:"/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
+		<control caption="OK"/>
+		<control caption="Odustani"/>
 	</dialog>
+
+	<dialog name="CIrcInputDlg" cookie="EdBuBuSt" caption="Channel Name|Why reason">
+		<control/>
+		<control caption="OK"/>
+		<control caption="Odustani"/>
+		<control caption="Enter a channel you want to add:|Enter kick/ban reason:"/>
+	</dialog>
+
 </dialogs>
 
 <!-- Columns Definitions -->
@@ -4294,6 +4307,7 @@
 		<column from="Client" to="Davaoc"/>
 		<column from="Downloaded" to="Skinuto"/>
 		<column from="Complete" to="Gotovo"/>
+		<column from="Country" to=""/>
 	</list>
 	<list name="CUploadCtrl">
 		<column from="Remote User" to="Korisnik"/>
@@ -4303,6 +4317,7 @@
 		<column from="Speed" to="Brzina"/>
 		<column from="Client" to="Klijent"/>
 		<column from="Rating" to="Ocena"/>
+		<column from="Country" to=""/>
 	</list>
 	<list name="CNeighboursWnd">
 		<column from="Address" to="Adresa"/>
@@ -4316,6 +4331,7 @@
 		<column from="Mode" to="Način"/>
 		<column from="Client" to="Klijent"/>
 		<column from="Name" to="Ime"/>
+		<column from="Country" to=""/>
 	</list>
 	<list name="CSecurityWnd">
 		<column from="Address / Content" to="Adresa / Sadržaj"/>
@@ -4330,10 +4346,13 @@
 		<column from="Port" to="Port"/>
 		<column from="Client" to="Klijent"/>
 		<column from="Last Seen" to="Zadnji Put Viđeno"/>
+		<column from="Daily Uptime" to=""/>
 		<column from="Name" to="Ime"/>
 		<column from="Description" to="Opis"/>
 		<column from="CurUsers" to="UprKorisnika"/>
 		<column from="MaxUsers" to="MaxKorisnika"/>
+		<column from="Failures" to=""/>
+		<column from="Country" to=""/>
 	</list>
 	<list name="CDiscoveryWnd">
 		<column from="Address" to="Adresa"/>
@@ -4367,6 +4386,8 @@
 		<column from="Host/Count" to="Davalac/Koliko"/>
 		<column from="Speed" to="Brzina"/>
 		<column from="Client" to="Klijent"/>
+		<column from="Time" to=""/>
+		<column from="Country" to=""/>
 	</list>
 	<list name="CUploadQueueList">
 		<column from="Name" to="Ime"/>
@@ -4387,9 +4408,14 @@
 		<column from="URL" to="URL"/>
 		<column from="Expires" to="Ističe"/>
 	</list>
-	<list name="CTorrentTrackerList">
+	<list name="CTorrentFileList">
 		<column from="Filename" to="Ime Datoteke"/>
 		<column from="Size" to="Veličina"/>
+	</list>
+	<list name="CTorrentTrackerList">
+		<column from="Tracker" to=""/>
+		<column from="Status" to=""/>
+		<column from="Type" to=""/>
 	</list>
 	<list name="CReviewList">
 		<column from="User" to="Korisnik"/>
